# facealert

./: README.md  app.py  app.py.backup  app.py.speed_optimized  config.py  embeddings_store.py  face_processor.py  pyproject.toml  simple_example.py  test_demo.py  utils.py
.local/state/replit/agent/filesystem/: filesystem_state.json
face_images/: README.txt
templates/: report.html
